; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/clockstuff/extr_propdelay.c_satdoit.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/clockstuff/extr_propdelay.c_satdoit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"%s, delay %g seconds\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (double, double, double, double, double, double, i8*)* @satdoit to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @satdoit(double %0, double %1, double %2, double %3, double %4, double %5, i8* %6) #0 {
  %8 = alloca double, align 8
  %9 = alloca double, align 8
  %10 = alloca double, align 8
  %11 = alloca double, align 8
  %12 = alloca double, align 8
  %13 = alloca double, align 8
  %14 = alloca i8*, align 8
  %15 = alloca double, align 8
  %16 = alloca double, align 8
  store double %0, double* %8, align 8
  store double %1, double* %9, align 8
  store double %2, double* %10, align 8
  store double %3, double* %11, align 8
  store double %4, double* %12, align 8
  store double %5, double* %13, align 8
  store i8* %6, i8** %14, align 8
  %17 = load double, double* %8, align 8
  %18 = load double, double* %9, align 8
  %19 = load double, double* %10, align 8
  %20 = load double, double* %11, align 8
  %21 = call i32 @satfinddelay(double %17, double %18, double %19, double %20, double* %15)
  %22 = load double, double* %12, align 8
  %23 = load double, double* %13, align 8
  %24 = load double, double* %10, align 8
  %25 = load double, double* %11, align 8
  %26 = call i32 @satfinddelay(double %22, double %23, double %24, double %25, double* %16)
  %27 = load i8*, i8** %14, align 8
  %28 = load double, double* %15, align 8
  %29 = load double, double* %16, align 8
  %30 = fadd double %28, %29
  %31 = call i32 @printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %27, double %30)
  ret void
}

declare dso_local i32 @satfinddelay(double, double, double, double, double*) #1

declare dso_local i32 @printf(i8*, i8*, double) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
